--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": "~12.11.1"
   },
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
     "build-client": "webpack",
     "build-client-watch": "webpack -w",
